@@ -2552,8 +2552,7 @@ extern "C" {
 #define IPMI_OEM_WISTRON_CHASSIS_COOLING_POWER_CONSUMPTION_AVAILABLE_BITMASK 0x02
 #define IPMI_OEM_WISTRON_CHASSIS_COOLING_POWER_CONSUMPTION_AVAILABLE_SHIFT   1
 
-/* w/ IPMI_CMD_OEM_WISTRON_GET_PASSWORD_POLICY
- * IPMI_CMD_OEM_WISTRON_SET_PASSWORD_POLICY
+/* w/ IPMI_CMD_OEM_WISTRON_SET_PASSWORD_POLICY
  */
 #define IPMI_CMD_OEM_WISTRON_PASSWORD_POLICY_DISABLE 0x00
 #define IPMI_CMD_OEM_WISTRON_PASSWORD_POLICY_ENABLE  0x01
